# maplibre-maui

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Directory.Build.props  LICENSE  README.md  UPSTREAM_FFI_EXPLORATION.md  maplibre-maui.sln
.github/workflows/: bump-version.yml  ci.yml  docs.yml  native-android-mln.yml  native-android-vulkan.yml  native-android.yml  native-apple-mln.yml  native-apple.yml  native-windows-vulkan.yml  native-windows.yml  release.yml
bindings/: MapLibreNative.Maui.Vulkan.csproj  MapLibreNative.Maui.csproj  Maui.MapLibre.Native.Vulkan.csproj  Maui.MapLibre.Native.csproj  MbglFrontend.cs  MbglMap.cs  MbglRunLoop.cs  MbglStyle.cs  MlnMap.cs  MlnRuntime.cs  NativeMethods.Mln.cs  NativeMethods.cs
bindings/buildTransitive/: MapLibreNative.Maui.targets
docs/: docfx.json  index.md
handlers/: IMapLibreMapController.cs  IMapLibreMapOptionsSink.cs  MapLibreMap.cs  MapLibreMapBuilder.Android.cs  MapLibreMapBuilder.Windows.cs  MapLibreMapController.Android.cs  MapLibreMapController.MaciOS.cs  MapLibreMapController.Windows.cs  MapLibreMapFactory.Android.cs  MapLibreMapFactory.MaciOS.cs  MapLibreMapFactory.Windows.cs  MapLibreMapHandler.Android.cs  MapLibreMapHandler.MaciOS.cs  MapLibreMapHandler.Windows.cs  MapLibreMapHandler.cs  MapLibreNative.Maui.Handlers.csproj  Maui.Maplibre.Handlers.csproj
handlers/EventArgs/: MapClickEventArgs.cs
handlers/Geometry/: LatLng.cs  LatLngBounds.cs  LatLngQuad.cs
handlers/Maps/: Layer.cs  Source.cs  Style.cs
native/: CMakeLists.txt
native/include/: mbgl_cabi.h  mln_cabi.h
native/src/: http_file_source_android.cpp  http_file_source_stub.cpp  mbgl_cabi.cpp  mbgl_cabi.h  mln_cabi.cpp  null_map_observer.hpp  platform_frontend.hpp  platform_frontend_android.cpp  platform_frontend_apple.cpp  platform_frontend_apple.mm  platform_frontend_windows.cpp
sample/: AppShell.xaml  BasicMapPage.xaml  BasicMapPage.xaml.cs  BasicMapViewModel.cs  DataDrivenCircleTestPage.xaml  DataDrivenCircleTestPage.xaml.cs  DataDrivenCircleTestViewModel.cs  GeoJsonLayersPage.xaml  GeoJsonLayersPage.xaml.cs  GeoJsonLayersViewModel.cs  GpsControlPage.xaml  GpsControlPage.xaml.cs  GpsControlViewModel.cs  MarkersPage.xaml  MarkersPage.xaml.cs  MarkersViewModel.cs  MauiSample.csproj
sample/ConsoleExample/: ConsoleExample.csproj  Program.cs
sample/WpfExample/: MainWindow.xaml  MainWindow.xaml.cs  WpfExample.csproj
wpf/: MapLibreNative.Maui.WPF.csproj  Maui.MapLibre.WPF.csproj  MbglMapHost.cs  MlnMapHost.cs
