cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

project(mbgl-cabi LANGUAGES CXX C)
set(CMAKE_CXX_STANDARD 20)

# ── maplibre-native dependency ────────────────────────────────────────────────
# maplibre-native is expected as a submodule at ../dependencies/maplibre-native
# or the path can be overridden via -DMAPLIBRE_NATIVE_DIR=...
if(NOT DEFINED MAPLIBRE_NATIVE_DIR)
    set(MAPLIBRE_NATIVE_DIR "${CMAKE_CURRENT_LIST_DIR}/../dependencies/maplibre-native"
        CACHE PATH "Path to maplibre-native source tree")
endif()

# Use the platform-specific toolchain if available (Windows vcpkg)
if(WIN32 AND EXISTS "${MAPLIBRE_NATIVE_DIR}/platform/windows/custom-toolchain.cmake")
    set(CMAKE_TOOLCHAIN_FILE "${MAPLIBRE_NATIVE_DIR}/platform/windows/custom-toolchain.cmake"
        CACHE STRING "CMake toolchain file")
endif()

# ── Shared (Windows/Android/Linux/macOS) or Static (iOS/tvOS/macCatalyst) ────
# Pass -DMBGL_STATIC=ON explicitly to force a static build (required for
# macCatalyst where the lib is statically linked via __Internal P/Invoke).
option(MBGL_STATIC "Build mbgl-cabi as a static library" OFF)
# Apple platforms (iOS, macCatalyst, macOS, tvOS) always use a static lib so that
# the MAUI app can link it via P/Invoke. Static libs don't run the linker at
# build time, which avoids cross-DSO typeinfo visibility issues with mbgl-core.
if(MBGL_STATIC OR APPLE)
    add_library(mbgl-cabi STATIC)
else()
    add_library(mbgl-cabi SHARED)
endif()

target_compile_definitions(mbgl-cabi PRIVATE
    MBGL_CABI_EXPORT
    _USE_MATH_DEFINES
    NOMINMAX
)

target_include_directories(mbgl-cabi PRIVATE
    "${CMAKE_CURRENT_LIST_DIR}/include"
    "${CMAKE_CURRENT_LIST_DIR}/src"
)

target_sources(mbgl-cabi PRIVATE
    src/mbgl_cabi.cpp
)

# ── Platform-specific frontend ────────────────────────────────────────────────
if(WIN32)
    target_sources(mbgl-cabi PRIVATE src/platform_frontend_windows.cpp)
    target_compile_options(mbgl-cabi PRIVATE /wd4267)
    target_include_directories(mbgl-cabi PRIVATE "${MAPLIBRE_NATIVE_DIR}/src")
elseif(ANDROID)
    target_sources(mbgl-cabi PRIVATE src/platform_frontend_android.cpp)
    target_link_libraries(mbgl-cabi PRIVATE EGL android log)
    target_include_directories(mbgl-cabi PRIVATE "${MAPLIBRE_NATIVE_DIR}/src")
    # Platform stub sources — symbols normally provided by MapLibreAndroid JNI SDK
    # that are absent in a standalone NDK build.
    target_sources(mbgl-cabi PRIVATE
        "${MAPLIBRE_NATIVE_DIR}/platform/default/src/mbgl/text/local_glyph_rasterizer.cpp"
        "${MAPLIBRE_NATIVE_DIR}/platform/default/src/mbgl/util/logging_stderr.cpp"
        "${MAPLIBRE_NATIVE_DIR}/platform/android/src/test/collator_test_stub.cpp"
        "${MAPLIBRE_NATIVE_DIR}/platform/android/src/test/number_format_test_stub.cpp"
        src/http_file_source_stub.cpp
    )
    # Deliberately compile WITHOUT -flto.
    # mbgl-core is compiled with -flto (via mbgl-compiler-options), so its archive
    # members contain LLVM IR bitcode. When lld links libmbgl-cabi.so it runs LTO
    # on those bitcode members. Hidden-visibility symbols (e.g. typeinfo for
    # mbgl::gl::RendererBackend) that are only referenced *within* the LTO
    # partition get internalized/renamed and then can't be found by their original
    # mangled names.
    # Compiling our sources WITHOUT -flto produces regular (non-LTO) object files
    # whose external references to those typeinfos are visible to the linker
    # *before* the LTO pass runs. lld is therefore required to emit the symbols
    # rather than internalize them, which resolves the undefined-symbol error.
    set(_CABI_OPT "$<OR:$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>>")
    target_compile_options(mbgl-cabi PRIVATE
        $<${_CABI_OPT}:-Oz>
    )
    target_link_options(mbgl-cabi PRIVATE
        $<${_CABI_OPT}:-flto>
        $<${_CABI_OPT}:-Wl,--icf=all>
    )
elseif(APPLE)
    target_sources(mbgl-cabi PRIVATE src/platform_frontend_apple.mm)
    set_source_files_properties(src/platform_frontend_apple.mm PROPERTIES
        COMPILE_FLAGS "-x objective-c++")
    target_include_directories(mbgl-cabi PRIVATE "${MAPLIBRE_NATIVE_DIR}/src")
    # metal-cpp headers (vendored inside maplibre-native)
    target_include_directories(mbgl-cabi PRIVATE
        "${MAPLIBRE_NATIVE_DIR}/vendor/metal-cpp")
    find_library(METAL_LIB Metal REQUIRED)
    find_library(METALKIT_LIB MetalKit REQUIRED)
    find_library(QUARTZCORE_LIB QuartzCore REQUIRED)
    target_link_libraries(mbgl-cabi PRIVATE ${METAL_LIB} ${METALKIT_LIB} ${QUARTZCORE_LIB})
else()
    message(FATAL_ERROR "Unsupported platform")
endif()

# ── Link maplibre-native ──────────────────────────────────────────────────────
# maplibre-native must be configured separately; we consume it via its cmake targets.
# Preferred: add_subdirectory(maplibre-native) before this or use find_package.
if(TARGET mbgl-core)
    target_link_libraries(mbgl-cabi PRIVATE mbgl-core)
else()
    message(WARNING "mbgl-core target not found — link maplibre-native before this project")
endif()

# ── Install / output ──────────────────────────────────────────────────────────
set_target_properties(mbgl-cabi PROPERTIES
    OUTPUT_NAME "mbgl-cabi"
    POSITION_INDEPENDENT_CODE ON
)

install(TARGETS mbgl-cabi DESTINATION lib)
install(FILES include/mbgl_cabi.h DESTINATION include)
